# tachyagent

./: .gitignore  ARCHITECTURE.md  GOLDEN_STANDARD_ROADMAP.md  LEGALOS_INTEGRATION_GUIDE.md  LEGAL_DATA_FABRIC_ARCHITECTURE.md  LEGAL_WORKFLOW_ARCHITECTURE.md  MULTI_AGENT_ARCHITECTURE.md  README.md  REPO_MAP.md  SYSTEM_DOCUMENTATION.md  install.sh
.github/: action.yml
.github/actions/tachy-agent/: README.md  action.yml
.github/workflows/: ci.yml  pr-review.yml  release.yml  tachy.yml
.kiro/specs/agent-intelligence/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/product-hardening-v3/: .config.kiro  design.md  requirements.md  tasks.md
assets/: comparison-tachy-vs-competitors.md
dashboard/src/app/: globals.css  layout.tsx  page.tsx
docs/: DEEP_ARCHITECTURE_MEMO.md  PACKAGED_WORKFLOWS.md  REPO_CLEANUP_HARDENING_PLAN.md  ROADMAP_WAVE2.md  YAYA_TACHY_INTEGRATION.md
examples/: yaya_finance_brief_workflow.py  yaya_tachy_workflow.py
landing/: index.html  install.sh  license-server.py
rust/: .gitignore  Cargo.toml  Dockerfile  README.md  advanced_rag_system.py  aws_batch_integration.md  complete_rag_system.py  docker-compose.yml  final_rag_system.py  finance_expert_brief.md  finance_expert_brief_v2.md  finance_expert_brief_v3.md  openapi.json  rag.md  rag_system.py  yaya_grounded_memo.md
rust/.githooks/: pre-commit
rust/bench/: run_bench.sh
rust/bench/results/: bench_gemma4_26b_20260403_180451.txt  bench_gemma4_26b_20260403_180542.txt
rust/crates/api/src/: client.rs
rust/crates/audit/: Cargo.toml
rust/crates/audit/src/: billing.rs  cost_model.rs  event.rs  lib.rs  license.rs  logger.rs  metering.rs  oauth.rs  policy.rs  policy_engine.rs  policy_file.rs  rbac.rs  security.rs  sentinel.rs  sso.rs  telemetry.rs
rust/crates/audit/tests/: billing_test.rs  metering_test.rs  sso_pen_test.rs
rust/crates/backend/: Cargo.toml
rust/crates/backend/src/: discovery.rs  embeddings.rs  frontier.rs  lib.rs  ollama.rs  openai_compat.rs  registry.rs  remote_tachy.rs
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/daemon/: Cargo.toml
rust/crates/daemon/examples/: serve_local.rs
rust/crates/daemon/src/: batch_client.rs  channels.rs  engine.rs  http.rs  internal_bus.rs  lib.rs  logger.rs  marketplace.rs  mcp.rs  mcp_client.rs  parallel.rs  saas.rs  state.rs  teams.rs  telemetry.rs  web.rs  worker_registry.rs
rust/crates/daemon/src/engine/: executor.rs  mod.rs  optimizer.rs  planning.rs  simple.rs  simulator.rs
rust/crates/daemon/src/http/: agent.rs  auth.rs  feedback.rs  governance.rs  intel.rs  mod.rs  router.rs  runs.rs  server.rs  swarm.rs  sync.rs  types.rs  utils.rs  vision.rs  webhooks.rs  workers.rs  yaya.rs
rust/crates/daemon/src/swarm/: mod.rs
rust/crates/daemon/tests/: e2e_smoke.rs  integration.rs  load_test.rs  marketplace_test.rs  saas_test.rs  teams_test.rs
rust/crates/intelligence/: Cargo.toml
rust/crates/intelligence/src/: collaboration.rs  compaction.rs  consensus.rs  context.rs  crisis.rs  dep_graph.rs  dream.rs  edit_test_fix.rs  evaluator.rs  finetune.rs  git.rs  harness.rs  indexer.rs  inspector.rs  lib.rs  lsp.rs  memory.rs  monorepo.rs  planner.rs  project_dna.rs  prompts.rs  rag.rs  rag_tools.rs  reward.rs  safety.rs  summary.rs  swarm.rs  swarm_tools.rs  training.rs  validation.rs  verification.rs  vision.rs
rust/crates/intelligence/src/indexer/: lang.rs  mod.rs  search.rs  summary.rs
rust/crates/platform/: Cargo.toml
rust/crates/platform/src/: agent.rs  agent_yaml.rs  compute.rs  crypto.rs  diplomacy.rs  identity.rs  lib.rs  logger.rs  replication.rs  reputation.rs  scheduler.rs  swarm.rs  sync.rs  workspace.rs
rust/crates/platform/src/finance/: liquidity.rs  mod.rs
rust/crates/platform/src/governance/: dao.rs  mod.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bash.rs  bootstrap.rs  browser.rs  compact.rs  config.rs  conversation.rs  diff.rs  file_ops.rs  filelock.rs  lib.rs  permissions.rs  prompt.rs  semantic_cache.rs  session.rs  transaction.rs  usage.rs
rust/crates/runtime/src/conversation/: mod.rs  runtime.rs  types.rs
rust/crates/runtime/src/file_ops/: directory.rs  mod.rs  read_write.rs  search.rs
rust/crates/runtime/tests/: filelock_prop_test.rs
rust/crates/tachy-cli/: Cargo.toml
rust/crates/tachy-cli/src/: agent.rs  analysis.rs  args.rs  doctor.rs  info.rs  main.rs  pipeline.rs  render.rs  repl.rs  setup.rs
rust/crates/tools/src/: custom.rs  lib.rs  web.rs
rust/scripts/: audit_to_finetune_bridge.py
scripts/: archive_yaya_workflow_history.py
sdk/python/: README.md  publish.sh  pyproject.toml
sdk/python/tachy/: __init__.py  client.py  models.py  yaya_client.py
sdk/python/tests/: test_client.py
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json  publish.sh  tsconfig.json
vscode-extension/src/: auditProvider.ts  chatProvider.ts  client.ts  completionProvider.ts  dagProvider.ts  extension.ts  fixProvider.ts
