[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "proprietary"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
# Pedantic style lints that are too noisy for this codebase
similar_names = "allow"
too_many_lines = "allow"
items_after_statements = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
needless_pass_by_value = "allow"
many_single_char_names = "allow"
no_effect_underscore_binding = "allow"
unused_async = "allow"
unnecessary_wraps = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
format_push_string = "allow"
assigning_clones = "allow"
case_sensitive_file_extension_comparisons = "allow"
match_same_arms = "allow"
format_collect = "allow"
ref_option = "allow"
too_many_arguments = "allow"
len_without_is_empty = "allow"
only_used_in_recursion = "allow"
