[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tachy-agent"
version = "0.1.0"
description = "Python SDK for the Tachy AI Agent platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.23"]
