[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Model backend abstraction layer — Ollama and OpenAI-compatible endpoints"

[dependencies]
runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tools = { path = "../tools" }

[lints]
workspace = true
