[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "HTTP daemon for the Tachy agent platform — REST API for agent management"

[dependencies]
audit = { path = "../audit" }
backend = { path = "../backend" }
intelligence = { path = "../intelligence" }
platform = { path = "../platform" }
runtime = { path = "../runtime" }
tools = { path = "../tools" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
