[package]
name = "intelligence"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Intelligence layer — codebase indexing, planning, edit-test-fix, git, smart context"

[dependencies]
runtime = { path = "../runtime" }
tools = { path = "../tools" }
backend = { path = "../backend" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
