[package]
name = "platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Enterprise agent platform — agent lifecycle, scheduling, and deployment"

[dependencies]
audit = { path = "../audit" }
backend = { path = "../backend" }
intelligence = { path = "../intelligence" }
runtime = { path = "../runtime" }
tools = { path = "../tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
thiserror = "1"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
