[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
glob = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
walkdir = "2"
headless_chrome = "1.0"
base64 = "0.21"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
