[package]
name = "tachy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
audit = { path = "../audit" }
backend = { path = "../backend" }
commands = { path = "../commands" }
crossterm = "0.28"
daemon = { path = "../daemon" }
intelligence = { path = "../intelligence" }
platform = { path = "../platform" }
pulldown-cmark = "0.13"
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tools = { path = "../tools" }

[lints]
workspace = true
